--- a/pms.app/Components/App.razor
+++ b/pms.app/Components/App.razor
@@ -5,16 +5,29 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="bootstrap/datatables.bootstrap5.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="pms.app.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+
+    <footer>
+        <script src="js/jquery-3.7.1.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/datatables.js"></script>
+        <script src="js/datatables.bootstrap5.js"></script>
+
+        <script src="js/app.js"></script>
+    </footer>
 </body>
+
 
 </html>
