--- a/pms.app/Components/Pages/CategoryPages/Index.razor
+++ b/pms.app/Components/Pages/CategoryPages/Index.razor
@@ -3,13 +3,15 @@
 @using Microsoft.AspNetCore.Authorization
 @using pms.app.Models
 @using System.Linq.Expressions;
+@using Microsoft.JSInterop
 
+@rendermode InteractiveServer
+@inject IJSRuntime JSRuntime
 @inject UnitOfWork.IUnitOfWork unitOfWork
 @inject NavigationManager NavigationManager
 @attribute [Authorize]
 
 <PageTitle>Categories</PageTitle>
-
 
 <div class="card">
 
@@ -23,13 +25,14 @@
                 <a href="categories/create" class="btn btn-primary">Add Category</a>
             </p>
 
-            <table class="table table-striped">
+            <table class="table table-striped" id="categoriesTable">
                 <thead>
                     <tr>
                         <th>Name</th>
                         <th>Description</th>
                         <th>Created</th>
                         <th>Updated</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -49,15 +52,20 @@
                     }
                 </tbody>
             </table>
-
         </div>
-
     </div>
-
 </div>
 
 @code {
     List<Category> Categories { get; set; } = new List<Category>();
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("myNamespace.onLoad.StartDataTable", "categoriesTable");
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
