--- a/pms.app/Components/Pages/CustomerItemPages/Index.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Index.razor
@@ -3,7 +3,10 @@
 @using Microsoft.AspNetCore.Authorization
 @using pms.app.Models
 @using System.Linq.Expressions;
+@using Microsoft.JSInterop
 
+@rendermode InteractiveServer
+@inject IJSRuntime JSRuntime
 @inject UnitOfWork.IUnitOfWork unitOfWork
 @inject NavigationManager NavigationManager
 @attribute [Authorize]
@@ -24,11 +27,11 @@
                     <a href="customeritems/create" class="btn btn-primary">Add New</a>
                 </p>
 
-                <table class="table table-striped">
+                <table class="table table-striped" id="customerItemsTable">
                     <thead>
                         <tr>
                             <th>Customer</th>
-                            <th>Item Number (SKU)</th>
+                            <th>Item Number</th>
                             <th>Name</th>
                             <th>Description</th>
                             <th>Price</th>
@@ -36,6 +39,7 @@
                             <th>Category</th>
                             <th>Created</th>
                             <th>Update</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -67,6 +71,14 @@
 
 @code {
     List<CustomerItem> CustomerItems { get; set; } = new List<CustomerItem>();
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("myNamespace.onLoad.StartDataTable", "customerItemsTable");
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
