--- a/pms.app/Components/Pages/CustomerPages/Index.razor
+++ b/pms.app/Components/Pages/CustomerPages/Index.razor
@@ -3,7 +3,10 @@
 @using Microsoft.AspNetCore.Authorization
 @using pms.app.Models
 @using System.Linq.Expressions;
+@using Microsoft.JSInterop
 
+@rendermode InteractiveServer
+@inject IJSRuntime JSRuntime
 @inject UnitOfWork.IUnitOfWork unitOfWork
 @inject NavigationManager NavigationManager
 @attribute [Authorize]
@@ -23,7 +26,7 @@
                     <a href="customers/create" class="btn btn-primary">Add New</a>
                 </p>
 
-                <table class="table table-striped">
+                <table class="table table-striped" id="customersTable">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -34,6 +37,7 @@
                             <th>Status</th>
                             <th>Created</th>
                             <th>Updated</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -65,6 +69,14 @@
 
 @code {
     List<Customer> Customers { get; set; } = new List<Customer>();
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("myNamespace.onLoad.StartDataTable", "customersTable");
+        }
+    }
 
     protected override async Task OnInitializedAsync()
     {
