--- a/pms.app/Components/Pages/ItemPages/Index.razor
+++ b/pms.app/Components/Pages/ItemPages/Index.razor
@@ -3,13 +3,15 @@
 @using Microsoft.AspNetCore.Authorization
 @using pms.app.Models
 @using System.Linq.Expressions;
+@using Microsoft.JSInterop
 
+@rendermode InteractiveServer
+@inject IJSRuntime JSRuntime
 @inject UnitOfWork.IUnitOfWork unitOfWork
 @inject NavigationManager NavigationManager
 @attribute [Authorize]
 
 <PageTitle>Items</PageTitle>
-
 
 <div class="card">
 
@@ -22,10 +24,10 @@
                 <p>
                     <a href="items/create" class="btn btn-primary">Add New</a>
                 </p>
-                <table class="table table-striped">
+                <table class="table table-striped" id="itemsTable">
                     <thead>
                         <tr>
-                            <th>Item Number (SKU)</th>
+                            <th>Item Number</th>
                             <th>Name</th>
                             <th>Description</th>
                             <th>Price</th>
@@ -33,6 +35,7 @@
                             <th>Category</th>
                             <th>Created</th>
                             <th>Update</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -62,12 +65,20 @@
 
 </div>
 
-
 @code {
     List<Item> Items { get; set; } = new List<Item>();
 
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("myNamespace.onLoad.StartDataTable", "itemsTable");
+        }
+    }
+
     protected override async Task OnInitializedAsync()
     {
+
         // Set up filter
         Expression<Func<Item, bool>> filter = null;
 
